# Study-and-Project-Assistant

./: .gitignore  CMakeLists.txt  README.md
include/: MainWindow.h
resources/: resources.qrc
src/: MainWindow.cpp  main.cpp
tests/: test_main.cpp
